src/css/dictionary.css
nav.dict
{
	width: 100%;
	margin-left: 1em;
	font-size: 16px;
	font-family: Quicksand, sans-serif;
	text-decoration: none;
}

ul#dictnav li
{
	display: inline;
	color: black;
	font-size: 16px;
	font-family: Quicksand, sans-serif;
	text-decoration: none;
	padding: 0.25em 0.25em;
	list-style-type: none;
}

table.termTable
{
	white-space: pre-wrap;
	margin-left: 1em;
	width: 90%;
	border-top
}

/* If the screen is too small for the alphabetical buttons */
@media only screen and ( max-width: 960px )
{
	div#dictcatbar
	{
		overflow-x: scroll;
		overflow-y: hidden;
		white-space: nowrap;
	}
}

/*
 * Color terms based off of category
 * Terms have a specific width they cannot exceed
 */
td.termSexuality
{
	background-color: rgb( 255, 178, 102 );	/* Orange */
	width: 12em;
	border-bottom: 4px solid white;
	border-collapse: collapse;
}

td.termGender
{
	background-color: rgb( 55, 255, 153 );	 /* Green */
	width: 12em;
	border-bottom: 4px solid white;
	border-collapse: collapse;
}

td.termTrans
{
	background-color: rgb( 255, 153, 255 );	/* Pink */
	width: 12em;
	border-bottom: 4px solid white;
	border-collapse: collapse;
}

td.termMisc
{
	background-color: rgb( 102, 102, 255 );	/* Blue */
	width: 12em;
	border-bottom: 4px solid white;
	border-collapse: collapse;
}

